--- a/Ninja_Gold/public/src/app/app.component.html
+++ b/Ninja_Gold/public/src/app/app.component.html
@@ -3,7 +3,8 @@
   <div class="count">
       <p><strong>Component {{title}}</strong></p>
       <hr>
-      <h1>Gold Count: {{gold}}</h1>
+      <h1>Gold Count: {{gold}}</h1><br>
+      <button (click)="resetGold()">RESET</button>
       <hr>
     </div><br>
   <div class="header">
