--- a/Restful_task_CRUD/public/src/app/app.component.html
+++ b/Restful_task_CRUD/public/src/app/app.component.html
@@ -51,7 +51,7 @@
         <input type="submit" value="Edit"/>
       </form>
     </div>
-    <app-task *ngIf="selectedTask" [taskToShow]="selectedTask"></app-task> 
+    <!-- <app-task *ngIf="selectedTask" [taskToShow]="selectedTask"></app-task>  -->
   </div>
 
 </body>
