--- a/Restful_tasks/public/src/app/app.component.html
+++ b/Restful_tasks/public/src/app/app.component.html
@@ -85,6 +85,8 @@
                     }, 1000);
                   });
           //only last one works, make sure each one is running
+          //use the component to control each task
+          //using an outdated version of Angualar 
             </script>
 
 
