--- a/Restful_task_CRUD/public/src/app/app.component.html
+++ b/Restful_task_CRUD/public/src/app/app.component.html
@@ -33,8 +33,9 @@
       <hr>
       <p><strong>{{task.title}}</strong>
       {{task.description}}</p>
-      <button class="btn btn-info btn-sm" (click)="editForm(task._id)">EDIT</button>
+      <button class="btn btn-info btn-sm" (click)="getOneToUpdate(task._id)">EDIT</button>
       <button class="btn btn-danger btn-sm ml-3" (click)="onDelete(task._id)">DELETE</button>
+      <!-- <button class="btn btn-danger btn-sm ml-3" (click)="showTask(task._id)">Show</button> -->
       
       <hr>
       </div>
@@ -43,15 +44,14 @@
   </div>
 
   <div class="editForm">
-     <div *ngIf="editTog"> 
       <h1>Edit the Task</h1>
-      <form (submit)="onEdit()">
+      <form (submit)="submitUpdate()" class="col-6">
         <p><input class="form-control" type="text" name="newTask.title" [(ngModel)]="task.title"></p>
         <p><input class="form-control" type="text" name="newTask.description" [(ngModel)]="task.description"></p>
         <input type="submit" value="Edit"/>
       </form>
-    </div>
-    <!-- <app-task *ngIf="selectedTask" [taskToShow]="selectedTask"></app-task>  -->
+    
+   <!-- <app-task *ngIf="selectedTask" [taskToShow]="selectedTask"></app-task>  -->
   </div>
 
 </body>
