--- a/Restful_task_CRUD/public/src/app/app.component.html
+++ b/Restful_task_CRUD/public/src/app/app.component.html
@@ -19,7 +19,7 @@
       <p>{{ newTask | json}}</p>
       <p>Title: <input class="form-control" type="text" name="newTask.title" [(ngModel)]="newTask.title"/></p>
       <p>description: <input class="form-control" type="text" name="newTask.description" [(ngModel)]="newTask.description"/></p>
-      <input class="form-control" type="submit" value="Create Task"/>
+      <input class="btn btn-primary" type="submit" value="Create Task"/>
     </form>
   </div>
   </div>
