--- a/Restful_task_CRUD/public/src/app/app.component.html
+++ b/Restful_task_CRUD/public/src/app/app.component.html
@@ -35,7 +35,7 @@
       {{task.description}}</p>
       <button class="btn btn-info btn-sm" (click)="getOneToUpdate(task._id)">EDIT</button>
       <button class="btn btn-danger btn-sm ml-3" (click)="onDelete(task._id)">DELETE</button>
-      <button class="btn btn-danger btn-sm ml-3" (click)="showTask(task._id)">Show</button>
+      <button class="btn btn-success btn-sm ml-3" (click)="getOneTaskFromService(task._id)">Show</button>
       
       <hr>
       </div>
