--- a/weather_API/public/src/app/dallas/dallas.component.html
+++ b/weather_API/public/src/app/dallas/dallas.component.html
@@ -1,1 +1,13 @@
-<p>dallas works!</p>
+<h1 class="text-center">Dallas, TX</h1>
+<div class="row">
+    <div class="col-6" *ngIf="weather!=undefined">
+        <p> Humidity: {{ weather.main.humidity }}</p>
+        <p> Temperature: {{ weather.main.temp }}</p>
+        <p> Temperature (High): {{ weather.main.temp_max }}</p>
+        <p> Temperature (Low): {{ weather.main.temp_min }}</p>
+        <p> Status: {{ weather.weather[0].description }}</p>
+    </div>
+    <div class="col-6">
+        <img width="50px" height="50px"class="img-thumbnail" src="https://assets.dmagstatic.com/wp-content/uploads/2016/09/DallasSkyline_SS_382997482.jpg" alt="">
+    </div>
+</div>
