--- a/Shinto_Coin/public/src/app/home/home.component.html
+++ b/Shinto_Coin/public/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div id="component">
+        <h1>ShintoCoin</h1>
+        <h2>Welcome to ShintoCoins! ShintoCoins are coins made by solving algorithms! To get started, head over to Mine Coins and get to work!</h2>
+</div>
