--- a/Shinto_Coin/public/src/app/mine/mine.component.html
+++ b/Shinto_Coin/public/src/app/mine/mine.component.html
@@ -1,1 +1,12 @@
-<p>mine works!</p>
+<div class="container">
+    <h1>Mine ShintoCoins</h1>
+    <h2>Here you can mine ShintoCoins by being the first to solve the trivia question</h2>
+    <h2 *ngIf="trivia">{{trivia.results[0].question}}</h2>
+    <form (submit)="triviaAnswer(answer)">
+        <selected name="answers" [(ngModel)]="answer">
+            <option *ngFor="let answer of answers" [(ngModel)]="answer">{{answer}}</option>
+        </selected>
+        <input type="submit" value="Submit">
+    </form>
+    <h3>{{result}}</h3>
+</div>
