--- a/Authors/public/src/app/new/new.component.html
+++ b/Authors/public/src/app/new/new.component.html
@@ -1,1 +1,10 @@
-<p>new works!</p>
+<div class="container">
+    <a href="" [routerLink]="['/']">Home</a>
+    <h5>Add new author:</h5>
+    <form (submit)="onSubmit()">
+        <input type="text" class="form-control" name="newAuthor.name" [(ngModel)]="newAuthor.name">
+        <small class="text-danger d-block" *ngIf="err.name != undefined">{{err.name.message}}</small>
+        <button type="submit" class="btn btn-primary float-right mt-3">Create Author</button>
+        <button type="submit" class="btn btn-secondary mt-3" [routerLink]="['/']">Cancel</button>
+    </form>
+</div>
