--- a/exam-prep/public/src/app/reviews/reviews.component.html
+++ b/exam-prep/public/src/app/reviews/reviews.component.html
@@ -1,1 +1,22 @@
-<p>reviews works!</p>
+<div class="container">
+        <h1>Let's eat</h1>
+        <h5>Reviews for {{restaurant.name}}</h5>
+        <button class="btn btn-primary" [routerLink]="['/restaurantz/'+restaurant._id+'/review']">New review</button>
+        <table class="table mt-1 table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Customer</th>
+                    <th scope="col">Stars</th>
+                    <th scope="col">Description</th>
+                </tr>
+            </thead>
+            <tbody *ngFor="let review of restaurant.reviews">
+                <tr>
+                    <td>{{review.reviewed_by}}</td>
+                    <td>{{review.rating}}</td>
+                    <td>{{review.review}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <button class="btn btn-secondary" [routerLink]="['/']">Go Back</button>
+    </div>
