--- a/exam-prep/public/src/app/edit-res/edit-res.component.html
+++ b/exam-prep/public/src/app/edit-res/edit-res.component.html
@@ -1,1 +1,17 @@
-<p>edit-res works!</p>
+<div class="container col-7">
+        <h5>Edit a restaurant</h5>
+        <form (submit)="editRestaurant()" class="border p-4">
+            <div class="form-group">
+                <label for="name">Restaurant Name:</label>
+                <input class="form-control" type="text" name="name" [(ngModel)]="restaurant.name">
+                <small class="text-danger d-block" *ngIf="err.name!=null">{{err.name.message}}</small>
+            </div>
+            <div class="form-group">
+                <label for="name">Cuisine type:</label>
+                <input class="form-control" type="text" name="cuisine" [(ngModel)]="restaurant.cuisine">
+                <small class="text-danger d-block" *ngIf="err.cuisine!=null">{{err.cuisine.message}}</small>
+            </div>
+            <button class="btn btn-primary float-right">Edit</button>
+            <button class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
+        </form>
+    </div>
