--- a/exam-prep/public/src/app/new-res/new-res.component.html
+++ b/exam-prep/public/src/app/new-res/new-res.component.html
@@ -1,1 +1,18 @@
-<p>new-res works!</p>
+<div class="container col-8">
+        <h1>Let's eat</h1>
+        <h5>Register a restaurant</h5>
+        <form (submit)="addRestaurant()" class="border p-4">
+            <div class="form-group">
+                <label for="name">Restaurant Name:</label>
+                <input class="form-control" type="text" name="name" [(ngModel)]="newRest.name">
+                <small class="text-danger d-block" *ngIf="err.name!=null">{{err.name.message}}</small>
+            </div>
+            <div class="form-group">
+                <label for="name">Cuisine:</label>
+                <input class="form-control" type="text" name="name" [(ngModel)]="newRest.cuisine">
+                <small class="text-danger d-block" *ngIf="err.cuisine!=null">{{err.cuisine.message}}</small>
+            </div>
+            <button class="btn btn-primary float-right">Register</button>
+            <button class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
+        </form>
+    </div>
