--- a/product-manager/public/src/app/home/home.component.html
+++ b/product-manager/public/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div id="box">
+        <h1>Home Page</h1>
+        <h2>Welcome to Project Product Management! Here we can manage a set of products. You are able to create products, remove old products and edit products.</h2>
+    </div>
