--- a/product-manager/public/src/app/list/list.component.html
+++ b/product-manager/public/src/app/list/list.component.html
@@ -1,1 +1,9 @@
-<p>list works!</p>
+<div id="box">
+    <div class="frame" *ngFor="let product of products">
+        <img src="{{product.image}}">
+        <h3>{{product.title}}</h3>
+        <h4>{{product.price}}</h4>
+        <button class="button btn btn-primary" [routerLink]="['/products', 'edit', product._id]">Edit</button>
+        <button class="button btn btn-danger" (click)="deleteProduct(product._id)">Delete</button>
+    </div>
+</div>
