--- a/commerce-manager/public/src/app/create/create.component.html
+++ b/commerce-manager/public/src/app/create/create.component.html
@@ -1,1 +1,23 @@
-<p>create works!</p>
+<div class="container col-8">
+        <h1>Commerce Manager</h1>
+        <h5>Create a Product</h5>
+        <form (submit)="addProduct()" class="border p-4">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input class="form-control" type="text" name="name" [(ngModel)]="newProd.name">
+                <small class="text-danger d-block" *ngIf="err.name!=null">{{err.name.message}}</small>
+            </div>
+            <div class="form-group">
+                <label for="name">Quantity:</label>
+                <input class="form-control" type="number" name="name" [(ngModel)]="newProd.quantity">
+                <small class="text-danger d-block" *ngIf="err.quantity!=null">{{err.qauntity.message}}</small>
+            </div>
+            <div class="form-group">
+                    <label for="name">Price:</label>
+                    <input class="form-control" type="number" name="name" [(ngModel)]="newProd.price">
+                    <small class="text-danger d-block" *ngIf="err.price!=null">{{err.price.message}}</small>
+                </div>
+            <button class="btn btn-primary float-right">Create</button>
+            <button class="btn btn-secondary" [routerLink]="['/']">Cancel</button>
+        </form>
+    </div>
