--- a/commerce-manager/public/src/app/list/list.component.html
+++ b/commerce-manager/public/src/app/list/list.component.html
@@ -1,1 +1,30 @@
-<p>list works!</p>
+<div class="container">
+        <h1>Commerce Manager</h1>
+        <button class="btn btn-primary" [routerLink]="['/products/new']">Add New Product</button>
+        <table class="table table-bordered mt-1 text-center">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody *ngFor="let product of products">
+                <tr>
+                    <td>{{product._id}}</td>
+                    <td>{{product.name}}</td>
+                    <td>{{product.quantity}}</td>
+                    <td>{{product.price}}</td>
+                    <td><button class="btn btn-secondary btn-sm mr-2" [routerLink]="['/restaurantz', restaurant._id]">Read reviews</button> <button
+                            class="btn btn-warning btn-sm mr-2" [routerLink]="[restaurant._id, 'edit']">Update</button>
+                             <button class="btn btn-danger btn-sm" *ngIf="((now-convertDate(restaurant.createdAt))/1000)>30" (click)="deleteRestaurant(restaurant._id)">Delete</button>
+                             <button class="btn btn-danger btn-sm disabled" *ngIf="((now-convertDate(restaurant.createdAt))/1000)<30">Delete</button>
+                            </td>
+                            
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <router-outlet></router-outlet>
