--- a/commerce-manager/public/src/app/create/create.component.html
+++ b/commerce-manager/public/src/app/create/create.component.html
@@ -9,8 +9,8 @@
             </div>
             <div class="form-group">
                 <label for="name">Quantity:</label>
-                <input class="form-control" type="number" name="name" [(ngModel)]="newProd.quantity">
-                <small class="text-danger d-block" *ngIf="err.quantity!=null">{{err.qauntity.message}}</small>
+                <input class="form-control" type="number" ng-model="myNumber" name="name" [(ngModel)]="newProd.quantity">
+                <small class="text-danger d-block" *ngIf="err.quantity!=null">{{err.quantity.message}}</small>
             </div>
             <div class="form-group">
                     <label for="name">Price:</label>
