--- a/commerce-manager/public/src/app/list/list.component.html
+++ b/commerce-manager/public/src/app/list/list.component.html
@@ -16,13 +16,12 @@
                     <td>{{product._id}}</td>
                     <td>{{product.name}}</td>
                     <td>{{product.quantity}}</td>
-                    <td>{{product.price}}</td>
-                    <td><button class="btn btn-secondary btn-sm mr-2" [routerLink]="['/restaurantz', restaurant._id]">Read reviews</button> <button
-                            class="btn btn-warning btn-sm mr-2" [routerLink]="[restaurant._id, 'edit']">Update</button>
-                             <button class="btn btn-danger btn-sm" *ngIf="((now-convertDate(restaurant.createdAt))/1000)>30" (click)="deleteRestaurant(restaurant._id)">Delete</button>
-                             <button class="btn btn-danger btn-sm disabled" *ngIf="((now-convertDate(restaurant.createdAt))/1000)<30">Delete</button>
-                            </td>
-                            
+                    <td>${{product.price}}</td>
+                    <td><button
+                            class="btn btn-warning btn-sm mr-2" [routerLink]="[product._id, 'edit']">Edit</button>
+                             <button class="btn btn-danger btn-sm" (click)="deleteProduct(product._id)">Delete</button>
+                            <a class="btn btn-success btn-sm" [routerLink]="[product._id]">Show</a>
+                            </td>      
                 </tr>
             </tbody>
         </table>
