--- a/pick-up-proj/public/src/app/home/home.component.html
+++ b/pick-up-proj/public/src/app/home/home.component.html
@@ -21,7 +21,7 @@
       <p class="masthead-subheading font-weight-light mb-0">Beginner - Advanced - Pro</p>
 
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
+        <a class="btn btn-xl btn-outline-light" href="sports/new">
           <i class="fas fa-download mr-2"></i>
           Rally the Players!
         </a>
