--- a/pick-up-proj/public/src/app/home/home.component.html
+++ b/pick-up-proj/public/src/app/home/home.component.html
@@ -3,8 +3,10 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" alt="">
-
+      
+      <img class="masthead-avatar mb-5" src="assets/images/sports.jpg" alt="" style="border-radius: 10%; box-shadow: 5px 5px black; width: 300px;">
+    
+   
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Wanna Play?</h1>
 
