--- a/pick-up-proj/public/src/app/create/create.component.html
+++ b/pick-up-proj/public/src/app/create/create.component.html
@@ -22,6 +22,16 @@
             <p>Name of event: <input class="form-control" type="text" name="name" [(ngModel)]="newSport.name"></p>
             <small class="text-danger d-block" *ngIf="err.name!=null">{{err.name.message}}</small>
         </div>
+        <div class="form-group">
+                <p>Category: </p>
+                <select name="category" [(ngModel)]="newSport.category">
+                    <option value="basketball">Basketball</option>
+                    <option value="soccer">Soccer</option>
+                    <option value="football">Football</option>
+                    <option value="volleyball">Volleyball</option>
+                </select>
+                <small class="text-danger d-block" *ngIf="err.level!=null">{{err.level.message}}</small>
+            </div>
         <div class="form-group" style="width: 500px; margin-left: 240px;">
             <p>Location: <input class="form-control" type="text" name="location" [(ngModel)]="newSport.location"></p>
             <small class="text-danger d-block" *ngIf="err.location!=null">{{err.location.message}}</small>
