--- a/pick-up-proj/public/src/app/home/home.component.html
+++ b/pick-up-proj/public/src/app/home/home.component.html
@@ -162,7 +162,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Football</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -174,11 +174,15 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <p class="mb-5">You can find a local football game to join. Make sure to include more information when rallying the players! Flag or tackle football are acceptable.</p>
+                <a href="/sports/football"><button class="btn btn-primary">
                   <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                  Go To Page!
+                </button></a>
+                <button class="btn btn-secondary" href="#" data-dismiss="modal" style="margin-left: 10px;">
+                    <i class="fas fa-times fa-fw"></i>
+                    Close Window
+                  </button>
               </div>
             </div>
           </div>
@@ -201,7 +205,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Basketball</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -213,11 +217,15 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <p class="mb-5">Find local basketball pickup games. Indoor or outdoor, make sure to coordinate ahead of time and bring your kicks.</p>
+                <button class="btn btn-primary" href="/sports/basketball" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
-                  Close Window
+                  Go To Page!
                 </button>
+                <button class="btn btn-secondary" href="#" data-dismiss="modal" style="margin-left: 10px;">
+                    <i class="fas fa-times fa-fw"></i>
+                    Close Window
+                    </button>
               </div>
             </div>
           </div>
@@ -240,7 +248,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Soccer</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -252,11 +260,15 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="#" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <p class="mb-5">Create or join a soccer, fútbol, calcio, or Fußball match. Lace up your boots and have fun!</p>
+                <button class="btn btn-primary" href="/sports/soccer" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
-                  Close Window
+                  Go To Page!
                 </button>
+                <button class="btn btn-secondary" href="#" data-dismiss="modal" style="margin-left: 10px;">
+                    <i class="fas fa-times fa-fw"></i>
+                    Close Window
+                    </button>
               </div>
             </div>
           </div>
@@ -279,7 +291,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Volleyball</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -291,11 +303,15 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="#" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <p class="mb-5">Organize or join a volleyball game near you. Make sure to say whether it's on the beach, grass, or indoors. Set it up and knock it down!</p>
+                <button class="btn btn-primary" href="/sports/volleyball" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
-                  Close Window
+                  Go To Page!
                 </button>
+                <button class="btn btn-secondary" href="#" data-dismiss="modal" style="margin-left: 10px;">
+                    <i class="fas fa-times fa-fw"></i>
+                    Close Window
+                    </button>
               </div>
             </div>
           </div>
